# second_voice

./: .aider.conf.yml  .aider.md  .clinerules  .gitignore  AGENTS.md  AIDER.md  CLAUDE.md  CLINE.md  CODEX.md  GEMINI.md  README.md  TESTING.md  config.example.json  migration-second_voice-fixed.sh  migration-second_voice.sh  pyproject.toml  pytest.ini  requirements.txt
.beads/: .gitignore  README.md  config.yaml  dolt-monitor.pid  dolt-server.activity  issues.jsonl  metadata.json
.claude/: CLAUDE.md
.gemini/: GEMINI.md
dev_notes/: .gitignore  system-prompts-refactor-proposal.md
docker/: Dockerfile.whisper  docker-compose.yml  service.py
docs/: DEFINITION_OF_DONE.md  FILE-NAMING-CONVENTIONS.md  README.md  TOOLS-CAPABILITIES.md  architecture.md  contributing.md  current-capabilities.md  definition-of-done.md  file-naming-conventions.md  gui-design.md  header-standard.md  implementation-reference.md  info1.md  info2.md  info3.md  info4.md  info5.md  mandatory.md  open-questions.md  project-context.md  prompt-patterns.md  prompts.md  providers.md  templates.md  test-guide.md  tools-capabilities.md  workflow-mapping.md  workflows.md
planning/: 2025-01-25_14-00-00_improve-cleanup-prompts-summary.md  2026-01-24_23-27-34_second-voice-refactor-prompt.md  2026-01-25_00-32-27_mode-selection-architecture-summary.md  2026-01-25_02-00-00_cli_options-prompt.md  2026-01-25_02-45-00_provider_specific_config-prompt.md  2026-01-25_18-46-25_add-tests-fix-pytest-plan.md  2026-01-25_18-46-25_add-tests-fix-pytest-summary.md  2026-01-25_21-55-00_amplify-soundbar-signal-plan.md  (+25 more)
(+174 files in other folders)
